# adventurex-2025

./: .gitignore  README.md  TODO.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: lib.rs  macros.rs
backend/src/api/: assistant.rs  chat.rs  patient_zero.rs
frontend/: .env  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  SavePoint.ts  Tip.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: Modal.vue  Obserable.vue  Tip.vue
frontend/src/entity/: Dialog.ts  NewPosts.ts  Post.ts  Postnew.ts  terminal.ts
frontend/src/entity/audio/: subtitle.ts
frontend/src/entity/dialogs/: act3.ts  act4.ts  act5.ts  act6.ts  help.ts  intro.ts  thankyou.ts
frontend/src/router/: index.ts
frontend/src/services/: deepseekAI.ts
frontend/src/stores/: audioStore.ts  gameStore.ts  modalStore.ts
frontend/src/utils/: audioEffect.ts  openai.ts
frontend/src/views/: AIChat.vue  Browser.vue  Cutscene.vue  Desktop.vue  EmptyView.vue  FullscreenDialog.vue  HomeView.vue  PlainTextView.vue  Terminal.vue  TwitterHomeStaticView.vue  TwitterMessagesStaticView.vue  Wikipedia.vue  XView.vue  Zhihu.vue
novel/: comment-gemini.md  gemini-refine.md  main.md  script.md
presentation/: Presentation.pptx  ~$Presentation.pptx
tauri-app/: package-lock.json  package.json  uno.config.ts  vite.config.ts
tauri-app/src/: App.vue  error.txt
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src/assets/: main.css
tauri-app/src/entity/: Dialog.ts
tauri-app/src/router/: index.ts
tauri-app/src/stores/: gameStore.ts
(+40 files in other folders)
